--- a/bin/gui_test.fxml
+++ b/bin/gui_test.fxml
@@ -79,6 +79,7 @@
                </cursor>
             </Button>
             <Label fx:id="downloadLabel11" disable="true" layoutX="154.0" layoutY="369.0" text="Export Data to..." />
+            <Label layoutX="116.0" layoutY="93.0" text="TODO: FIX UP PORT STUFF" />
          </children>
          <stylesheets>
             <URL value="@tabstyle.css" />
