--- a/src/gui_test.fxml
+++ b/src/gui_test.fxml
@@ -12,100 +12,145 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane id="mainWholePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="771.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.GuiController">
+<Group fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.GuiController">
    <children>
-      <AnchorPane id="leftAnchor" layoutX="4.0" layoutY="4.0" minHeight="271.0" prefHeight="493.0" prefWidth="323.0" SplitPane.resizableWithParent="false">
+      <Pane id="mainWholePane" fx:id="appPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="771.0" stylesheets="@style.css">
          <children>
-            <Label id="dataSource" fx:id="dataSource" prefHeight="35.0" prefWidth="323.0" stylesheets="@tabstyle.css" text="  Data Source">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="downloadLabel" disable="true" layoutX="151.0" layoutY="153.0" text="Save Data to..." />
-            <RadioButton fx:id="disConnRBtn" focusTraversable="false" layoutX="23.0" layoutY="254.0" mnemonicParsing="false" onAction="#selectDisconnected" stylesheets="@buttonstyle.css" text="Disconnected">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </RadioButton>
-            <RadioButton fx:id="connRBtn" disable="true" focusTraversable="false" layoutX="23.0" layoutY="59.0" mnemonicParsing="false" onAction="#selectConnected" stylesheets="@buttonstyle.css" text="Connected">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </RadioButton>
-            <Button fx:id="loadBtn" disable="true" layoutX="151.0" layoutY="282.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Load">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="saveBtn" disable="true" layoutX="150.0" layoutY="204.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Save">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <ComboBox fx:id="fileOptions" disable="true" layoutX="151.0" layoutY="249.0" prefWidth="167.0" promptText="Select Data File" stylesheets="@tabstyle.css" />
-            <TextField fx:id="filenameField" disable="true" layoutX="151.0" layoutY="173.0" prefHeight="28.0" prefWidth="167.0" promptText="Filename" stylesheets="@tabstyle.css" />
-            <ComboBox fx:id="portsAvailable" disable="true" layoutX="151.0" layoutY="88.0" prefHeight="27.0" prefWidth="167.0" promptText="None">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ComboBox>
-            <Button fx:id="refreshBtn" disable="true" layoutX="246.0" layoutY="57.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Refresh">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Label fx:id="portLabel" disable="true" layoutX="151.0" layoutY="61.0" text="Ports:" />
-            <Button fx:id="maskTestingBtn" disable="true" layoutX="19.0" layoutY="333.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Mask-testing">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="pauseBtn" disable="true" layoutX="151.0" layoutY="121.0" minWidth="73.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Pause">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="discardBtn" disable="true" layoutX="21.0" layoutY="135.0" minWidth="73.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Discard Data">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <ComboBox fx:id="fileOptions1" disable="true" layoutX="152.0" layoutY="336.0" prefWidth="167.0" promptText="Select Boundary File" stylesheets="@tabstyle.css" />
-            <Label fx:id="downloadLabel1" disable="true" layoutX="153.0" layoutY="316.0" text="Import Data from..." />
-            <TextField fx:id="filenameField1" disable="true" layoutX="153.0" layoutY="388.0" prefHeight="28.0" prefWidth="167.0" promptText="Filename" stylesheets="@tabstyle.css" />
-            <Button fx:id="saveBtn1" disable="true" layoutX="152.0" layoutY="419.0" mnemonicParsing="false" stylesheets="@buttonstyle.css" text="Save">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Label fx:id="downloadLabel11" disable="true" layoutX="154.0" layoutY="369.0" text="Export Data to..." />
-            <Label layoutX="116.0" layoutY="93.0" text="TODO: FIX UP PORT STUFF" />
+            <AnchorPane id="leftAnchor" fx:id="leftAnchor" layoutX="4.0" layoutY="4.0" minHeight="271.0" prefHeight="493.0" prefWidth="323.0" SplitPane.resizableWithParent="false">
+               <children>
+                  <Label id="dataSource" fx:id="dataSource" prefHeight="35.0" prefWidth="323.0" stylesheets="@tabstyle.css" text="  Data Source">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <GridPane prefHeight="493.0" prefWidth="323.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.32452392578125" minWidth="10.0" prefWidth="151.48019409179688" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.02639770507812" minWidth="10.0" prefWidth="171.51980590820312" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <RadioButton fx:id="connRBtn" disable="true" focusTraversable="false" mnemonicParsing="false" onAction="#selectConnected" stylesheets="@buttonstyle.css" text="Connected   " GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </RadioButton>
+                        <RadioButton fx:id="disconnRBtn" focusTraversable="false" mnemonicParsing="false" onAction="#selectDisconnected" stylesheets="@buttonstyle.css" text="Disconnected" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </RadioButton>
+                        <Button fx:id="pauseBtn" alignment="TOP_CENTER" disable="true" minWidth="106.0" mnemonicParsing="false" onAction="#pauseDataAcquisition" stylesheets="@buttonstyle.css" text="Pause" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="saveBtn" alignment="TOP_CENTER" disable="true" minWidth="106.0" mnemonicParsing="false" onAction="#saveDataAcquisition" stylesheets="@buttonstyle.css" text="Save Data" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Button>
+                        <Label text="TODO: SORT OUT " GridPane.columnIndex="1" />
+                        <Label text="CONNECTION PORTS" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets top="25.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Button fx:id="discardBtn" alignment="TOP_CENTER" contentDisplay="CENTER" disable="true" mnemonicParsing="false" onAction="#discardData" text="Discard Data" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Button>
+                        <Group GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                           <children>
+                              <Label text="Load:" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                 <GridPane.margin>
+                                    <Insets left="35.0" top="20.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Button layoutY="17.0" minWidth="106.0" mnemonicParsing="false" text="Input Data" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                                 <GridPane.margin>
+                                    <Insets left="35.0" top="17.0" />
+                                 </GridPane.margin>
+                              </Button>
+                           </children>
+                        </Group>
+                        <Button fx:id="maskTestingBtn" minWidth="116.0" mnemonicParsing="false" onAction="#editMask" text="Mask-Testing" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                        <Group GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                           <children>
+                              <Label disable="true" layoutY="20.0" minHeight="15.0" minWidth="100.0" prefHeight="15.0" prefWidth="35.0" text="X:" visible="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" fx:id="xCoordValues">
+                                 <GridPane.margin>
+                                    <Insets bottom="25.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label fx:id="coordLabel" text="Coordinates:" visible="false" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                                 <GridPane.margin>
+                                    <Insets bottom="50.0" left="35.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label fx:id="yCoordValues" disable="true" layoutY="40.0" minHeight="15.0" minWidth="100.0" prefHeight="15.0" prefWidth="35.0" text="Y:" visible="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                           </children>
+                        </Group>
+                        <CheckBox fx:id="highBoundaryCheckbox" mnemonicParsing="false" onAction="#setToHighBoundary" text="High Boundary" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+                        <Button fx:id="setHighBtn" mnemonicParsing="false" onAction="#setHighBoundary" text="Set High Boundary" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="setLowBtn" minWidth="144.0" mnemonicParsing="false" onAction="#setLowBoundary" text="Set Low Boundary" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                        <CheckBox fx:id="lowBoundaryCheckbox" minWidth="123.0" mnemonicParsing="false" onAction="#setToLowBoundary" text="Low Boundary" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                     </children>
+                  </GridPane>
+               </children>
+               <stylesheets>
+                  <URL value="@tabstyle.css" />
+                  <URL value="@buttonstyle.css" />
+               </stylesheets>
+            </AnchorPane>
+            <AnchorPane id="leftAnchor" fx:id="rightAnchor" layoutX="331.0" layoutY="4.0" prefHeight="493.0" prefWidth="435.0" stylesheets="@tabstyle.css" SplitPane.resizableWithParent="false">
+               <children>
+                  <Label id="dataSource" fx:id="measurementsLabel" prefHeight="35.0" prefWidth="435.0" stylesheets="@tabstyle.css" text=" Measurements">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </Label>
+                  <LineChart fx:id="lineChart" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="-12.0" layoutY="30.0" legendVisible="false" prefHeight="458.0" prefWidth="488.0" stylesheets="@chartstyle.css" verticalGridLinesVisible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
+                    <xAxis>
+                      <NumberAxis label="Time" side="BOTTOM" tickLabelFill="WHITE" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis label="Measurement" lowerBound="-5.0" side="LEFT" tickLabelFill="WHITE" />
+                    </yAxis>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </LineChart>
+                  <AreaChart disable="true" layoutX="-12.0" layoutY="30.0" prefHeight="458.0" prefWidth="488.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </AreaChart>
+               </children>
+            </AnchorPane>
          </children>
-         <stylesheets>
-            <URL value="@tabstyle.css" />
-            <URL value="@buttonstyle.css" />
-         </stylesheets>
-      </AnchorPane>
-      <AnchorPane id="leftAnchor" layoutX="331.0" layoutY="4.0" prefHeight="493.0" prefWidth="435.0" stylesheets="@tabstyle.css" SplitPane.resizableWithParent="false">
-         <children>
-            <Canvas fx:id="canvas" height="417.0" layoutX="48.0" layoutY="50.0" width="375.0" />
-            <LineChart disable="true" layoutX="-12.0" layoutY="30.0" prefHeight="458.0" prefWidth="488.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-            </LineChart>
-            <Label id="dataSource" fx:id="measurements" prefHeight="35.0" prefWidth="435.0" stylesheets="@tabstyle.css" text=" Measurements">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
-            </Label>
-         </children>
-      </AnchorPane>
+      </Pane>
    </children>
-</Pane>
+</Group>
