--- a/src/gui_test.fxml
+++ b/src/gui_test.fxml
@@ -90,7 +90,7 @@
                         <Button fx:id="maskTestingBtn" minWidth="116.0" mnemonicParsing="false" onAction="#editMask" text="Mask-Testing" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                         <Group GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                            <children>
-                              <Label fx:id="coordLabel" text="Coordinates:" visible="false" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                              <Label fx:id="coordLabel" text="General Coordinates:" visible="false" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                                  <GridPane.margin>
                                     <Insets bottom="50.0" left="35.0" />
                                  </GridPane.margin>
@@ -103,14 +103,20 @@
                               </Label>
                            </children>
                         </Group>
-                        <CheckBox fx:id="highBoundaryCheckbox" mnemonicParsing="false" onAction="#setToHighBoundary" selected="true" text="High Boundary" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+                        <CheckBox fx:id="highBoundaryCheckbox" mnemonicParsing="false" onAction="#setToHighBoundary" selected="true" text="Add High Boundary" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                           <font>
+                              <Font size="12.0" />
+                           </font></CheckBox>
                         <Button fx:id="setHighBtn" mnemonicParsing="false" onAction="#setHighBoundary" text="Set High Boundary" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
                         </Button>
                         <Button fx:id="setLowBtn" minWidth="144.0" mnemonicParsing="false" onAction="#setLowBoundary" text="Set Low Boundary" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-                        <CheckBox fx:id="lowBoundaryCheckbox" minWidth="123.0" mnemonicParsing="false" onAction="#setToLowBoundary" text="Low Boundary" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                        <CheckBox fx:id="lowBoundaryCheckbox" minWidth="134.0" mnemonicParsing="false" onAction="#setToLowBoundary" text="Add Low Boundary" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+                           <font>
+                              <Font size="12.0" />
+                           </font></CheckBox>
                      </children>
                   </GridPane>
                </children>
@@ -129,25 +135,53 @@
                         <Insets left="5.0" />
                      </padding>
                   </Label>
-                  <LineChart fx:id="lineChart" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="-12.0" layoutY="30.0" legendVisible="false" prefHeight="458.0" prefWidth="488.0" stylesheets="@chartstyle.css" verticalGridLinesVisible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
+                  <LineChart fx:id="lineChart" animated="false" horizontalZeroLineVisible="false" layoutX="-12.0" layoutY="30.0" legendVisible="false" prefHeight="458.0" prefWidth="488.0" stylesheets="@chartstyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="35.0">
                     <xAxis>
-                      <NumberAxis label="Time" side="BOTTOM" tickLabelFill="WHITE" />
+                      <NumberAxis animated="false" autoRanging="false" forceZeroInRange="false" label="Time (seconds)" prefHeight="47.0" prefWidth="449.0" side="BOTTOM" tickLabelFill="WHITE" upperBound="50.0" />
                     </xAxis>
                     <yAxis>
-                      <NumberAxis label="Measurement" lowerBound="-5.0" side="LEFT" tickLabelFill="WHITE" />
+                      <NumberAxis animated="false" autoRanging="false" forceZeroInRange="false" label="Measurement" lowerBound="-10.0" prefHeight="382.0" prefWidth="54.0" side="LEFT" tickLabelFill="WHITE" upperBound="50.0" />
                     </yAxis>
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
                   </LineChart>
-                  <AreaChart disable="true" layoutX="-12.0" layoutY="30.0" prefHeight="458.0" prefWidth="488.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </AreaChart>
+                  <Polygon fx:id="upperBoundary" fill="CORNFLOWERBLUE" layoutX="70.0" layoutY="50.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
+                    <points>
+                    	<Double fx:value="0.0" />
+            	      	<Double fx:value="0.0" />
+            	      	        	      				
+            	      	<Double fx:value="351.0" />
+            	      	<Double fx:value="0.0" />
+            	      				
+            	      	<Double fx:value="351.0" />
+            	      	<Double fx:value="0.0" />
+            	      
+            	      	<Double fx:value="0.0" />
+            	      	<Double fx:value="0.0" />
+                    </points>
+                  </Polygon>
+                  <Polygon fx:id="lowerBoundary" fill="LIGHTCORAL" layoutX="70.0" layoutY="431.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
+                     <points>
+                        <Double fx:value="0.0" />
+                        <Double fx:value="0.0" />
+                        
+                        <Double fx:value="351" />
+                        <Double fx:value="0.0" />
+                        
+                        <Double fx:value="351.0" />
+                        <Double fx:value="1.0" />
+                        
+                        <Double fx:value="0.0" />
+                        <Double fx:value="1.0" />
+                     </points>
+                  </Polygon>
+                  <Group layoutX="115.0" layoutY="-31.0">
+                     <children>
+                        <Label layoutX="10.0" layoutY="30.0" minHeight="15.0" minWidth="200.0" prefHeight="15.0" prefWidth="100.0" text="X:" textFill="WHITE" fx:id="xDataCoord" />
+                        <Label fx:id="yDataCoord" layoutX="10.0" layoutY="50.0" minHeight="15.0" minWidth="100.0" prefHeight="15.0" prefWidth="35.0" text="Y:" textFill="WHITE" />
+                     </children>
+                  </Group>
                </children>
             </AnchorPane>
          </children>
