--- a/src/gui_test.fxml
+++ b/src/gui_test.fxml
@@ -124,20 +124,27 @@
                         <Insets left="25.0" top="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Group GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
-                     <children>
-                        <Circle fill="LIGHTCORAL" layoutY="28.0" radius="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="4.0" />
-                        <Circle fill="CORNFLOWERBLUE" radius="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="4.0" />
-                     </children>
-                     <GridPane.margin>
-                        <Insets left="170.0" top="65.0" />
-                     </GridPane.margin>
-                  </Group>
                   <Button fx:id="setMaskBtn" mnemonicParsing="false" onAction="#setMaskBoundary" text="Set" visible="false" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets bottom="20.0" right="43.0" top="75.0" />
                      </GridPane.margin>
                   </Button>
+                  <ScrollPane focusTraversable="false" prefHeight="200.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="300.0" prefWidth="255.0">
+                           <children>
+                              <TextArea fx:id="maskTestResults" editable="false" focusTraversable="false" prefHeight="300.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <font>
+                                    <Font size="9.0" />
+                                 </font>
+                              </TextArea>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                     <GridPane.margin>
+                        <Insets top="50.0" />
+                     </GridPane.margin>
+                  </ScrollPane>
                </children>
             </GridPane>
          </children>
