--- a/src/gui_test.fxml
+++ b/src/gui_test.fxml
@@ -268,13 +268,19 @@
                   <Insets left="5.0" />
                </padding>
             </Label>
-            <Group layoutX="284.0" AnchorPane.leftAnchor="293.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="0.0">
+            <Group layoutX="266.0" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label focusTraversable="false" layoutX="10.0" layoutY="15.0" minHeight="15.0" minWidth="250.0" prefHeight="15.0" text="X:" textFill="WHITE" fx:id="xDataCoord" />
-                  <Label fx:id="yDataCoord" focusTraversable="false" layoutX="250.0" layoutY="15.0" minHeight="15.0" minWidth="100.0" prefHeight="15.0" prefWidth="35.0" text="Y:" textFill="WHITE" />
-                  <Label fx:id="plotCoordLabel" focusTraversable="false" layoutX="9.0" text="Plot Coordinates:" />
+                  <Label focusTraversable="false" layoutY="15.0" minHeight="15.0" minWidth="250.0" prefHeight="15.0" prefWidth="374.0" text="X:" textFill="WHITE" fx:id="xDataCoord">
+                     <font>
+                        <Font size="12.0" />
+                     </font></Label>
+                  <Label fx:id="yDataCoord" focusTraversable="false" layoutY="30.0" minHeight="15.0" minWidth="100.0" prefHeight="15.0" prefWidth="35.0" text="Y:" textFill="WHITE">
+                     <font>
+                        <Font size="12.0" />
+                     </font></Label>
                </children>
             </Group>
+            <Label fx:id="plotCoordLabel" focusTraversable="false" layoutX="157.0" layoutY="9.0" text="Plot Coordinates" />
          </children>
       </AnchorPane>
    </children>
